# practicepanther-mcp

./: CLAUDE.md  README.md  env.example  mcp_oauth_provider.py  oauth.py  pp_client.py  pyproject.toml  render.yaml  requirements.txt  server.py  swagger-v2.json
.claude/skills/generate-mcp-credentials/: SKILL.md
tests/: test_task_bugs.py
