[project]
name = "practicepanther-mcp"
version = "1.0.0"
description = "MCP server for PracticePanther legal practice management API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "uvicorn>=0.34.0",
    "starlette>=0.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
